# rumpsteak

./: Cargo.toml  LICENSE  README.md  run.sh
.github/workflows/: check.yml
benches/: double_buffering.rs  ring.rs  subtype.rs  subtyping.rs  three_adder.rs
caching/: Caching.nuscr  Cargo.toml
caching/src/: cache.rs  client.rs  main.rs  origin.rs  proxy.rs
comparison/: Cargo.toml  commands.sh
comparison/double_buffering/: Cargo.toml
comparison/double_buffering/benches/: double_buffering.rs
comparison/double_buffering/src/: ferrite.rs  mpstthree.rs  rumpsteak.rs  sesh.rs
comparison/fft/: Cargo.toml
comparison/fft/benches/: fft.rs
comparison/fft/src/: ferrite.rs  lib.rs  mpstthree.rs  rumpsteak.rs  rustfft.rs  sesh.rs
comparison/mesh/: Cargo.toml  build.rs
comparison/mesh/benches/: mesh.rs
comparison/mesh/src/: lib.rs  rumpsteak.rs
comparison/stream/: Cargo.toml  build.rs
comparison/stream/benches/: stream.rs
comparison/stream/src/: ferrite.rs  lib.rs  mpstthree.rs  rumpsteak.rs  sesh.rs
comparison/subtyping/: Cargo.toml
comparison/subtyping/src/: double_buffering.rs  nested_choice.rs  precise.rs  ring.rs  stream.rs
dynamic_verify/: Cargo.toml  README.md
dynamic_verify/protocols/: 2buyers copy.txt  2buyers.txt  3buyers.txt  auth.txt  diabetes.txt  exchange.txt  original.txt  output.txt  travel_agency.txt  validation.txt
dynamic_verify/src/: grammar.pest  main.rs  parser.rs
examples/: 3buyers.rs  Diabetes.rs  adder.rs  alternating_bit.rs  auth.rs  client_server_log.rs  db.rs  db_opt.rs  double_buffering.rs  elevator.rs  fft.rs  oauth.rs  oneshot_three_adder.rs  ping_pong.rs  plus_minus.rs  plus_or_minus.rs  ring.rs  ring_choice.rs  ring_max.rs  simple.rs  simple_adder.rs  simple_auth.rs  simple_refinement.rs  three_adder.rs  travel_agency.rs  validation.rs  validation_v2.rs
examples/Running examples/: run.sh
examples/Running examples/3buyers/: 3buyers.nuscr  3buyers.rs  3buyers_expected.dot  3buyers_expected.rs  3buyers_implementation.rs  A_expected.dot  B_expected.dot  C_expected.dot  S_expected.dot  run.sh  three_buyers.nuscr
examples/Running examples/adder/: C_expected.dot  S_expected.dot  adder.nuscr  adder_expected.rs  run.sh
examples/Running examples/double-buffering/: db.nuscr  db_expected.rs  k_expected.dot  k_optimised.dot  run.sh  s_expected.dot  t_expected.dot
examples/Running examples/map_reduce/: map_reduce.nuscr  map_reduce_implem.rs  run.sh
examples/Running examples/oauth/: A_expected.dot  C_expected.dot  S_expected.dot  o_auth.nuscr  oauth_expected.rs  run.sh
examples/Running examples/ping_pong/: A_expected.dot  B_expected.dot  ping_pong.nuscr  ping_pong_expected.rs  ping_pong_implementation.rs  run.sh
examples/Running examples/plus_or_minus/: A_expected.dot  B_expected.dot  C_expected.dot  plus_minus_implementation.rs  plus_or_minus.nuscr  plus_or_minus_expected.rs  plus_or_minus_full.rs  plus_or_minus_implementation.rs  run.sh
examples/Running examples/ring_max/: A_expected.dot  B_expected.dot  C_expected.dot  D_expected.dot  E_expected.dot  F_expected.dot  G_expected.dot  ring_max.nuscr  ring_max_expected.rs  ring_max_implementation.rs  run.sh
examples/Running examples/simple_adder/: C_expected.dot  S_expected.dot  run.sh  simple_adder.nuscr  simple_adder_expected.rs  simple_adder_implementation.rs
examples/Running examples/simple_auth/: C.dot  C_expected.dot  S.dot  S_expected.dot  run.sh  simple_auth.nuscr  simple_auth.rs  simple_auth_expected.rs  simple_auth_implem.rs  simple_auth_implementation.rs
examples/Running examples/travel_agency/: A_expected.dot  C_expected.dot  run.sh  travel_agency.nuscr  travel_agency_expected.rs  travel_agency_implem.rs  travel_agency_implementation.rs
examples/refinements_example/: 2buyers.rs  2buyers_gtn.rs  auth.rs
examples/simple_aepl/: A.aepl  A.dot  B.aepl  B.dot  simple.nuscr  simple.rs
fsm/: Cargo.toml
fsm/src/: lib.rs  local.rs  petrify.rs
fsm/src/dot/parse/: fsm.rs  mod.rs  transition.rs
fsm/src/subtype/: main.rs  mod.rs  prefix.rs
generate/: Cargo.toml
generate/src/: lib.rs  main.rs  parser.rs  template.rs
generate/src/parser/: digraph.pest  label.pest
generate/templates/: protocol.rs
macros/: Cargo.toml
macros/src/: choice.rs  label.rs  lib.rs  message.rs  parse.rs  role.rs  roles.rs  session.rs
oneshot/: Cargo.toml
oneshot/examples/: oneshot_three_adder.rs
overhead/: compare.sh  dynamic_verify.sh  eval.py  eval2.py
overhead/results/: auth.1.json
src/: channel.rs  choice.rs  effect.rs  fsm.rs  lib.rs  oneshot.rs  predicate.rs  role.rs  serialize.rs
src/fsm/: dot.rs  local.rs  mod.rs  petrify.rs
src/fsm/dot/: mod.rs  parse.rs
src/fsm/dot/parse/: fsm.rs  mod.rs  transition.rs
src/parser/: predicate.pest
src/serialize/: bit_matrix.rs  mod.rs  pair.rs  subtyping.rs
src/session/: channel.rs  mod.rs  serialize.rs
src/subtype/: bit_matrix.rs  main.rs  matrix.rs  mod.rs  prefix.rs
src/subtyping/: main.rs  mod.rs
