[package]
name = "rumpsteak"
version = "0.1.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]

[lib]
bench = false

[[bin]]
name = "subtyping"
path = "src/subtyping/main.rs"
required-features = ["argh", "atty", "parsing", "subtyping", "termcolor"]

[[bench]]
name = "double_buffering"
harness = false

[[bench]]
name = "ring"
harness = false

[[bench]]
name = "subtyping"
harness = false
required-features = ["serialize", "subtyping"]

[[bench]]
name = "three_adder"
harness = false

[dependencies]
argh = { version = "0.1", optional = true }
atty = { version = "0.2", optional = true }
bitvec = { version = "0.20", optional = true }
enum-kinds = { version = "0.5", optional = true }
futures = { version = "0.3", optional = true }
logos = { version = "0.12", optional = true }
memchr = { version = "2.4", optional = true }
petgraph = { version = "0.5", optional = true }
rumpsteak-macros = { path = "macros", version = "0.1", optional = true }
termcolor = { version = "1.1", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
futures = { version = "0.3", features = ["thread-pool"] }
num-complex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
rumpsteak-oneshot = { path = "oneshot" }
tempfile = "3.2"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }

[features]
default = ["session"]
fsm = ["petgraph", "thiserror"]
parsing = ["enum-kinds", "fsm", "logos", "memchr"]
serialize = ["fsm", "rumpsteak-macros/serialize", "session"]
session = ["futures", "rumpsteak-macros", "thiserror"]
subtyping = ["bitvec", "fsm"]

[profile.release]
debug = true

[profile.bench]
debug = true

[workspace]
members = ["generate", "macros", "oneshot"]
