[package]
name = "caching"
version = "0.0.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "../README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]
publish = false

[dependencies]
argh = "0.1"
bincode = "1.3"
bytes = { version = "1.0", features = ["serde"] }
fred = "3.0.0-beta"
futures = "0.3"
http-serde = "1.0"
rand = "0.8"
rumpsteak = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

[dependencies.hyper]
version = "0.14"
features = ["client", "http1", "http2", "server", "tcp"]
