[package]
name = "rumpsteak-generate"
version = "0.1.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "../README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]

[[bin]]
name = "rumpsteak-generate"
required-features = ["clap"]

[features]
default = ["clap"]

[dependencies]
askama = { git = "https://github.com/djc/askama", rev = "95e346e" }
clap = { version = "*", optional = true, features=["derive"]}
heck = "0.3"
indexmap = "1.6"
pest = "2.1"
pest_derive = "2.1"
petgraph = "0.5"
dot-parser = "*"
