[package]
name = "rumpsteak-macros"
version = "0.1.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "../README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }

[features]
serialize = []
