[package]
name = "double_buffering"
version = "0.0.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "../../README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]
publish = false

[lib]
bench = false

[[bench]]
name = "double_buffering"
harness = false

[dependencies]
crossbeam-channel = "0.5"
ferrite-session = "0.2"
futures = "0.3"
mpst-seq = "0.0.7"
mpstthree = "0.0.9"
rumpsteak = { path = "../.." }
rumpsteak-oneshot = { path = "../../oneshot" }
sesh = "0.1.1"
tokio = { version = "1.8", features = ["rt"] }

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1.8", features = ["rt-multi-thread"] }
