[package]
name = "fft"
version = "0.0.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "../README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]
publish = false

[lib]
bench = false

[[bench]]
name = "fft"
harness = false

[dependencies]
crossbeam-channel = "0.5"
ferrite-session = "0.2"
futures = "0.3"
mpst-seq = "0.0"
mpstthree = "0.0"
num-complex = "0.4"
paste = "1.0"
rumpsteak = { path = "../.." }
rumpsteak-oneshot = { path = "../../oneshot" }
rustfft = "6.0"
sesh = "0.1"
tokio = { version = "1.8", features = ["rt"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
tokio = { version = "1.8", features = ["rt-multi-thread"] }
