[package]
name = "subtyping"
version = "0.0.0"
authors = ["Zak Cutner <me@zakcutner.uk>"]
edition = "2018"
description = "Session types for asynchronous communication between multiple parties."
readme = "../README.md"
repository = "https://github.com/zakcutner/rumpsteak"
license = "MIT"
keywords = ["async", "deadlock", "safety", "session", "types"]
categories = ["asynchronous", "concurrency"]
publish = false

[[bin]]
name = "precise"
path = "src/precise.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

[dependencies]
argh = "0.1"
rumpsteak = { path = "../..", default-features = false, features = ["fsm"] }
